# maxalign-rs

./: CHANGELOG.md  Cargo.toml  README.md
src/: alignment.rs  bitops.rs  error.rs  fasta.rs  heuristic.rs  main.rs  optimize.rs  output.rs  report.rs
